--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -15,10 +15,6 @@ void \mbox{\hyperlink{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}{tabuleiro\+\_
 \begin{DoxyCompactList}\small\item\em Coloca o tabuleiro e o estado do jogo num ficheiro. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\+\_\+jogada}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, int col, int lin)
 \begin{DoxyCompactList}\small\item\em Função (auxiliar) que atualiza os dados de forma a que a jogada fique realizada. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\+\_\+file\+Tab}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, F\+I\+LE $\ast$fp)
-\begin{DoxyCompactList}\small\item\em Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{logica_8h_acb7c3a1d861395fabd4db18a365738b9}{file\+\_\+pos\+Ant}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, F\+I\+LE $\ast$fp)
-\begin{DoxyCompactList}\small\item\em Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}{ler\+\_\+ficheiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char linha\mbox{[}$\,$\mbox{]})
 \begin{DoxyCompactList}\small\item\em Lê um ficheiro e atualiza o estado do jogo com o estado do jogo definido nesse ficheiro. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}{update\+\_\+array\+\_\+jogadas}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char lin\+\_\+fich\mbox{[}$\,$\mbox{]})
@@ -60,124 +56,27 @@ Determina se foi o jogador 1 ou 2 a jogar, e, consoante isto, coloca na array \c
 Incrementa o numero de jogadas. \end{quote}
 
 
-Definido na linha 27 do ficheiro logica.\+c.
+Definido na linha 29 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{27                                                    \{}
-\DoxyCodeLine{28     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{29     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{31     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{32         e-\/>jogadas[jogadas].jogador1.linha = lin;}
-\DoxyCodeLine{33         e-\/>jogadas[jogadas].jogador1.coluna = col;}
-\DoxyCodeLine{34     \} \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{35         e-\/>jogadas[jogadas].jogador2.linha = lin;}
-\DoxyCodeLine{36         e-\/>jogadas[jogadas].jogador2.coluna = col;}
-\DoxyCodeLine{37     \}}
-\DoxyCodeLine{38     \textcolor{keywordflow}{if} (jog == 1)}
-\DoxyCodeLine{39         e-\/>jogador\_atual = 2;}
-\DoxyCodeLine{40     \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{41         e-\/>jogador\_atual = 1;}
-\DoxyCodeLine{43         e-\/>num\_jogadas++;}
-\DoxyCodeLine{44     \}}
-\DoxyCodeLine{45 \}}
-
-\end{DoxyCode}
-\mbox{\Hypertarget{logica_8h_acb7c3a1d861395fabd4db18a365738b9}\label{logica_8h_acb7c3a1d861395fabd4db18a365738b9}} 
-\index{logica.h@{logica.h}!file\_posAnt@{file\_posAnt}}
-\index{file\_posAnt@{file\_posAnt}!logica.h@{logica.h}}
-\doxysubsubsection{\texorpdfstring{file\_posAnt()}{file\_posAnt()}}
-{\footnotesize\ttfamily void file\+\_\+pos\+Ant (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{F\+I\+LE $\ast$}]{fp }\end{DoxyParamCaption})}
-
-
-
-Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. 
-
-
-\begin{DoxyParams}{Parâmetros}
-{\em e} & Estado atual do jogo. \\
-\hline
-{\em fp} & apontador do ficheiro, usado para escrever no documento de texto. \\
-\hline
-\end{DoxyParams}
-\begin{quote}
-Coloca jogadas anteriores no ficheiro. \end{quote}
-
-
-Definido na linha 102 do ficheiro logica.\+c.
-
-
-\begin{DoxyCode}{0}
-\DoxyCodeLine{102                                        \{}
-\DoxyCodeLine{103     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{104     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{106     \textcolor{keywordflow}{if} (jog == 2) \{}
-\DoxyCodeLine{107         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{108             \textcolor{keywordflow}{if}(i < 10)}
-\DoxyCodeLine{109                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{110             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{111                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{112 }
-\DoxyCodeLine{113             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{114                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{115                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{116             \}}
-\DoxyCodeLine{117             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{118                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{119             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{120         \}}
-\DoxyCodeLine{121     \}}
-\DoxyCodeLine{122 }
-\DoxyCodeLine{123     \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{124         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{125             \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{126                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{127             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{128                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{129 }
-\DoxyCodeLine{130             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{131                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{132             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{133         \}}
-\DoxyCodeLine{134     \}}
-\DoxyCodeLine{135 \}}
-
-\end{DoxyCode}
-\mbox{\Hypertarget{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}\label{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}} 
-\index{logica.h@{logica.h}!imprime\_fileTab@{imprime\_fileTab}}
-\index{imprime\_fileTab@{imprime\_fileTab}!logica.h@{logica.h}}
-\doxysubsubsection{\texorpdfstring{imprime\_fileTab()}{imprime\_fileTab()}}
-{\footnotesize\ttfamily void imprime\+\_\+file\+Tab (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{F\+I\+LE $\ast$}]{fp }\end{DoxyParamCaption})}
-
-
-
-Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comando \char`\"{}gr\char`\"{}. 
-
-
-\begin{DoxyParams}{Parâmetros}
-{\em e} & Estado atual do jogo. \\
-\hline
-{\em fp} & apontador do ficheiro, usado para escrever no documento de texto. \\
-\hline
-\end{DoxyParams}
-\begin{quote}
-Imprime o conteudo do tabuleiro, imprimindo \textquotesingle{}$\ast$\textquotesingle{} no caso de a Peça ser \char`\"{}\+B\+R\+A\+N\+C\+A\char`\"{},\textquotesingle{}\#\textquotesingle{} no caso de a peça ser \char`\"{}\+P\+R\+E\+T\+A\char`\"{}, e \textquotesingle{}.\textquotesingle{} no caso de ser \char`\"{}\+V\+A\+Z\+I\+O\char`\"{}. \end{quote}
-
-
-Definido na linha 89 do ficheiro logica.\+c.
-
-
-\begin{DoxyCode}{0}
-\DoxyCodeLine{89                                            \{}
-\DoxyCodeLine{91     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{92         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{93             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
-\DoxyCodeLine{94             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
-\DoxyCodeLine{95         \}}
-\DoxyCodeLine{96         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{97     \}}
-\DoxyCodeLine{98     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{99 \}}
+\DoxyCodeLine{29                                                    \{}
+\DoxyCodeLine{30     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{31     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{33     \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{34         e-\/>jogadas[jogadas].jogador1.linha = lin;}
+\DoxyCodeLine{35         e-\/>jogadas[jogadas].jogador1.coluna = col;}
+\DoxyCodeLine{36     \} \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{37         e-\/>jogadas[jogadas].jogador2.linha = lin;}
+\DoxyCodeLine{38         e-\/>jogadas[jogadas].jogador2.coluna = col;}
+\DoxyCodeLine{39     \}}
+\DoxyCodeLine{40     \textcolor{keywordflow}{if} (jog == 1)}
+\DoxyCodeLine{41         e-\/>jogador\_atual = 2;}
+\DoxyCodeLine{42     \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{43         e-\/>jogador\_atual = 1;}
+\DoxyCodeLine{45         e-\/>num\_jogadas++;}
+\DoxyCodeLine{46     \}}
+\DoxyCodeLine{47 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}\label{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}} 
@@ -202,19 +101,19 @@ Função que verifica se a jogada é possivel.
 \end{DoxyReturn}
 
 
-Definido na linha 48 do ficheiro logica.\+c.
+Definido na linha 50 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{48                                               \{}
-\DoxyCodeLine{49     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{50     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
-\DoxyCodeLine{51     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
-\DoxyCodeLine{52 }
-\DoxyCodeLine{53         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{54     \}}
-\DoxyCodeLine{55     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{56 \}}
+\DoxyCodeLine{50                                               \{}
+\DoxyCodeLine{51     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{52     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
+\DoxyCodeLine{53     abs((e-\/>ultima\_jogada.linha) -\/ lin) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
+\DoxyCodeLine{54 }
+\DoxyCodeLine{55         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{56     \}}
+\DoxyCodeLine{57     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{58 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}\label{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}} 
@@ -249,24 +148,24 @@ Coloca uma peça preta na casa anterior da peça branca. \end{quote}
 Coloca a nova posição da peça branca como posição anterior para ser usada futuramente. \end{quote}
 
 
-Definido na linha 8 do ficheiro logica.\+c.
+Definido na linha 10 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{8                                    \{}
-\DoxyCodeLine{9     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
-\DoxyCodeLine{10     \textcolor{keywordtype}{int} col = c.coluna;}
-\DoxyCodeLine{11     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
-\DoxyCodeLine{13         e-\/>tab[lin][col] = BRANCA;}
-\DoxyCodeLine{15         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
-\DoxyCodeLine{17         e-\/>ultima\_jogada.coluna = col;}
-\DoxyCodeLine{18         e-\/>ultima\_jogada.linha = lin;}
-\DoxyCodeLine{19         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
-\DoxyCodeLine{20         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{21     \}}
-\DoxyCodeLine{22     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{23     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{24 \}}
+\DoxyCodeLine{10                                    \{}
+\DoxyCodeLine{11     \textcolor{keywordtype}{int} lin = abs(c.linha -\/ 8) -\/ 1;}
+\DoxyCodeLine{12     \textcolor{keywordtype}{int} col = c.coluna;}
+\DoxyCodeLine{13     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
+\DoxyCodeLine{15         e-\/>tab[lin][col] = BRANCA;}
+\DoxyCodeLine{17         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
+\DoxyCodeLine{19         e-\/>ultima\_jogada.coluna = col;}
+\DoxyCodeLine{20         e-\/>ultima\_jogada.linha = lin;}
+\DoxyCodeLine{21         \mbox{\hyperlink{logica_8h_a9cf19fce71c78359807a3f579925edbb}{atualiza\_jogada}}(e, col, lin);}
+\DoxyCodeLine{22         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{23     \}}
+\DoxyCodeLine{24     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{25     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{26 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}\label{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}} 
@@ -289,22 +188,22 @@ Verifica se o jogo terminou.
 \end{DoxyReturn}
 
 
-Definido na linha 59 do ficheiro logica.\+c.
+Definido na linha 61 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{59                                \{}
-\DoxyCodeLine{60     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{61     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
-\DoxyCodeLine{62         r = 1;}
-\DoxyCodeLine{63     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
-\DoxyCodeLine{64             r = 2;}
-\DoxyCodeLine{65     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 32)}
-\DoxyCodeLine{66                 r = 3;}
-\DoxyCodeLine{67     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{68         r = 0;}
-\DoxyCodeLine{69     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{70 \}}
+\DoxyCodeLine{61                                \{}
+\DoxyCodeLine{62     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{63     \textcolor{keywordflow}{if} ((e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
+\DoxyCodeLine{64         r = 1;}
+\DoxyCodeLine{65     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} ((e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
+\DoxyCodeLine{66             r = 2;}
+\DoxyCodeLine{67     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (e-\/>num\_jogadas == 32)}
+\DoxyCodeLine{68                 r = 3;}
+\DoxyCodeLine{69     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{70         r = 0;}
+\DoxyCodeLine{71     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{72 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}\label{logica_8h_ac272f234a6e3ed2b2e3c05c727e33c75}} 
@@ -339,37 +238,36 @@ Abre o ficheiro pedido pelo utilizador e lê o seu conteúdo. \end{quote}
 Ao ler o ficheiro, quando chega ao local onde se encontram as jogadas anteriores, chama a função \char`\"{}update\+\_\+array\+\_\+jogadas()\char`\"{}. \end{quote}
 
 
-Definido na linha 137 do ficheiro logica.\+c.
+Definido na linha 91 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{137                                             \{}
-\DoxyCodeLine{138 }
-\DoxyCodeLine{139     FILE *fp;}
-\DoxyCodeLine{140     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
-\DoxyCodeLine{141     \textcolor{keywordtype}{int} k = 0;}
-\DoxyCodeLine{142     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{144     comando = strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{145     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{146     strcat(comando, \textcolor{stringliteral}{".txt"});}
-\DoxyCodeLine{148     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
-\DoxyCodeLine{149     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
-\DoxyCodeLine{150         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
-\DoxyCodeLine{151         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
-\DoxyCodeLine{152             \mbox{\hyperlink{dados_8h_a99f70b4c2f315652b02f7a8c874cb2e4}{set\_casa}}(e, lin\_fich, k);}
-\DoxyCodeLine{154             \textcolor{keywordflow}{if} (k >= 9) \{}
-\DoxyCodeLine{155                 \mbox{\hyperlink{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}{update\_array\_jogadas}}(e, lin\_fich);}
-\DoxyCodeLine{156             \}}
-\DoxyCodeLine{157             k++;}
-\DoxyCodeLine{158 }
-\DoxyCodeLine{159         \}}
-\DoxyCodeLine{160         fclose(fp);}
-\DoxyCodeLine{161         r = 1;}
-\DoxyCodeLine{162     \}}
-\DoxyCodeLine{163     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{164         r = 0;}
-\DoxyCodeLine{165     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{166 \}}
+\DoxyCodeLine{91                                             \{}
+\DoxyCodeLine{92 }
+\DoxyCodeLine{93     FILE *fp;}
+\DoxyCodeLine{94     \textcolor{keywordtype}{char} lin\_fich [BUF\_SIZE], *comando;}
+\DoxyCodeLine{95     \textcolor{keywordtype}{int} k = 0;}
+\DoxyCodeLine{96     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{98     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{99     comando = strtok (NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{100     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{102     \textcolor{comment}{//A função "access" retorna -\/1 caso nao encontre o ficheiro.}}
+\DoxyCodeLine{103     \textcolor{keywordflow}{if} (access(comando, F\_OK) != -\/1) \{}
+\DoxyCodeLine{104         fp = fopen(comando, \textcolor{stringliteral}{"r"});}
+\DoxyCodeLine{105         \textcolor{keywordflow}{while} (fgets(lin\_fich, BUF\_SIZE, fp) != NULL) \{}
+\DoxyCodeLine{106             \mbox{\hyperlink{dados_8h_a99f70b4c2f315652b02f7a8c874cb2e4}{set\_casa}}(e, lin\_fich, k);}
+\DoxyCodeLine{108             \textcolor{keywordflow}{if} (k >= 9) \{}
+\DoxyCodeLine{109                 \mbox{\hyperlink{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}{update\_array\_jogadas}}(e, lin\_fich);}
+\DoxyCodeLine{110             \}}
+\DoxyCodeLine{111             k++;}
+\DoxyCodeLine{112         \}}
+\DoxyCodeLine{113         fclose(fp);}
+\DoxyCodeLine{114         r = 1;}
+\DoxyCodeLine{115     \}}
+\DoxyCodeLine{116     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{117         r = 0;}
+\DoxyCodeLine{118     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{119 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a00a35418e9e9a6c215b653dceb822a03}\label{logica_8h_a00a35418e9e9a6c215b653dceb822a03}} 
@@ -392,21 +290,21 @@ Uma posição para a coluna do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 202 do ficheiro logica.\+c.
+Definido na linha 155 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{202                                \{}
-\DoxyCodeLine{203     \textcolor{keywordtype}{int} cord;}
-\DoxyCodeLine{204     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
-\DoxyCodeLine{205     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{206         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
-\DoxyCodeLine{207             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
-\DoxyCodeLine{208             \textcolor{keywordflow}{return} cord;}
-\DoxyCodeLine{209         \}}
-\DoxyCodeLine{210     \}}
-\DoxyCodeLine{211     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{212 \}}
+\DoxyCodeLine{155                                \{}
+\DoxyCodeLine{156     \textcolor{keywordtype}{int} cord;}
+\DoxyCodeLine{157     \textcolor{comment}{//Quando a função isalpha() retornar algum valor diferente de 0, converte-\/o num int e devolve-\/o.f}}
+\DoxyCodeLine{158     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{159         \textcolor{keywordflow}{if} (isalpha(str[i]) != 0) \{}
+\DoxyCodeLine{160             cord = str[i] -\/ \textcolor{charliteral}{'a'};}
+\DoxyCodeLine{161             \textcolor{keywordflow}{return} cord;}
+\DoxyCodeLine{162         \}}
+\DoxyCodeLine{163     \}}
+\DoxyCodeLine{164     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{165 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}\label{logica_8h_a224bb3db996c2f3baca3a72b8509c3ce}} 
@@ -429,23 +327,23 @@ Uma posição para a linha do tabuleiro.
 \end{DoxyReturn}
 
 
-Definido na linha 188 do ficheiro logica.\+c.
+Definido na linha 141 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{188                               \{}
-\DoxyCodeLine{189     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{190     \textcolor{keywordtype}{char} *end;}
-\DoxyCodeLine{191     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/0 num int e devolve-\/o.}}
-\DoxyCodeLine{192     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
-\DoxyCodeLine{193         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
-\DoxyCodeLine{194            r = strtol(\&str[i], \&end, 10);}
-\DoxyCodeLine{195            r = abs(r-\/8);}
-\DoxyCodeLine{196            \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{197         \}}
-\DoxyCodeLine{198     \}}
-\DoxyCodeLine{199     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{200 \}}
+\DoxyCodeLine{141                               \{}
+\DoxyCodeLine{142     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{143     \textcolor{keywordtype}{char} *end;}
+\DoxyCodeLine{144     \textcolor{comment}{//Quando enconrtar algum elemento da string para a qual a funcao isdigit() devolva algum valor diferente de 0, converte-\/o num int e devolve-\/o.}}
+\DoxyCodeLine{145     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; str[i] != \textcolor{charliteral}{'\(\backslash\)0'}; i++) \{}
+\DoxyCodeLine{146         \textcolor{keywordflow}{if} (isdigit(str[i]) != 0) \{}
+\DoxyCodeLine{147            r = strtol(\&str[i], \&end, 10);}
+\DoxyCodeLine{148            r = abs(r-\/8);}
+\DoxyCodeLine{149            \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{150         \}}
+\DoxyCodeLine{151     \}}
+\DoxyCodeLine{152     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{153 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}\label{logica_8h_ab69d463df342757a679a40c4f6e5d6ae}} 
@@ -473,22 +371,22 @@ Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca n
 Cria o ficheiro com o nome pedido pelo utilizador, ou abre-\/o, caso este ja exista. \end{quote}
 
 
-Definido na linha 73 do ficheiro logica.\+c.
+Definido na linha 75 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{73                                                 \{}
-\DoxyCodeLine{74     \textcolor{keywordtype}{char} *comando;}
-\DoxyCodeLine{76     comando = strtok(linha, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{77     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{78     strcat(comando, \textcolor{stringliteral}{".txt"});}
-\DoxyCodeLine{79 }
-\DoxyCodeLine{81     FILE *fp;}
-\DoxyCodeLine{82     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
-\DoxyCodeLine{83     \mbox{\hyperlink{logica_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
-\DoxyCodeLine{84     \mbox{\hyperlink{logica_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
-\DoxyCodeLine{85     fclose(fp);}
-\DoxyCodeLine{86 \}}
+\DoxyCodeLine{75                                                 \{}
+\DoxyCodeLine{76     \textcolor{keywordtype}{char} *comando;}
+\DoxyCodeLine{78     strtok(linha, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{79     comando = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{80     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{81 }
+\DoxyCodeLine{83     FILE *fp;}
+\DoxyCodeLine{84     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
+\DoxyCodeLine{85     \mbox{\hyperlink{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}{imprime\_fileTab}}(e, fp);}
+\DoxyCodeLine{86     \mbox{\hyperlink{interface_8h_acb7c3a1d861395fabd4db18a365738b9}{file\_posAnt}}(e, fp);}
+\DoxyCodeLine{87     fclose(fp);}
+\DoxyCodeLine{88 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}\label{logica_8h_a608d40c8b37424e7bd4e5ee3f0fe8b97}} 
@@ -512,26 +410,26 @@ Depois de ler ficheiro, atualiza as posições do array onde sao guardadas jogad
 Determina qual das partes da função usar (parte 1 caso i seja menor que 2, e parte 2 caso i seja maior que dois.) \end{quote}
 
 
-Definido na linha 168 do ficheiro logica.\+c.
+Definido na linha 121 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{168                                                        \{}
-\DoxyCodeLine{169     \textcolor{keywordtype}{int} i, index;}
-\DoxyCodeLine{170     \textcolor{keywordtype}{char} *nome;}
-\DoxyCodeLine{171     \textcolor{comment}{// A partir do ficheiro, obtem o numero da jogada e guarda-\/a na variável index.}}
-\DoxyCodeLine{172     index = atoi(lin\_fich) -\/ 1;}
-\DoxyCodeLine{173 }
-\DoxyCodeLine{174     \textcolor{comment}{/* Retira os primeiros 4 elementos da string (uma string que fosse: "01: e5 d5" passa a ser "e5 d5".}}
-\DoxyCodeLine{175 \textcolor{comment}{     */}}
-\DoxyCodeLine{176     strtok(lin\_fich, \textcolor{stringliteral}{" "});}
-\DoxyCodeLine{177     nome = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{179     \textcolor{keywordflow}{for} (i = 0; nome[i] != \textcolor{charliteral}{'\(\backslash\)0'} ; i++);}
-\DoxyCodeLine{180     \textcolor{keywordflow}{if} (i > 2)}
-\DoxyCodeLine{181         \mbox{\hyperlink{dados_8h_afc541510798bc33e8220baa9bf271f46}{set\_jogadas}}(e, nome, 2, index);}
-\DoxyCodeLine{182 }
-\DoxyCodeLine{183     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{184         \mbox{\hyperlink{dados_8h_afc541510798bc33e8220baa9bf271f46}{set\_jogadas}}(e, nome, 1, index);}
-\DoxyCodeLine{185 \}}
+\DoxyCodeLine{121                                                        \{}
+\DoxyCodeLine{122     \textcolor{keywordtype}{int} i, index;}
+\DoxyCodeLine{123     \textcolor{keywordtype}{char} *nome;}
+\DoxyCodeLine{124     \textcolor{comment}{// A partir do ficheiro, obtem o numero da jogada e guarda-\/a na variável index.}}
+\DoxyCodeLine{125     index = atoi(lin\_fich) -\/ 1;}
+\DoxyCodeLine{126 }
+\DoxyCodeLine{127     \textcolor{comment}{/* Retira os primeiros 4 elementos da string (uma string que fosse: "01: e5 d5" passa a ser "e5 d5".}}
+\DoxyCodeLine{128 \textcolor{comment}{     */}}
+\DoxyCodeLine{129     strtok(lin\_fich, \textcolor{stringliteral}{" "});}
+\DoxyCodeLine{130     nome = strtok(NULL, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{132     \textcolor{keywordflow}{for} (i = 0; nome[i] != \textcolor{charliteral}{'\(\backslash\)0'} ; i++);}
+\DoxyCodeLine{133     \textcolor{keywordflow}{if} (i > 2)}
+\DoxyCodeLine{134         \mbox{\hyperlink{dados_8h_afc541510798bc33e8220baa9bf271f46}{set\_jogadas}}(e, nome, 2, index);}
+\DoxyCodeLine{135 }
+\DoxyCodeLine{136     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{137         \mbox{\hyperlink{dados_8h_afc541510798bc33e8220baa9bf271f46}{set\_jogadas}}(e, nome, 1, index);}
+\DoxyCodeLine{138 \}}
 
 \end{DoxyCode}
