--- a/LI2/latex/struct_c_o_o_r_d_e_n_a_d_a.tex
+++ b/LI2/latex/struct_c_o_o_r_d_e_n_a_d_a.tex
@@ -1,5 +1,14 @@
 \hypertarget{struct_c_o_o_r_d_e_n_a_d_a}{}\doxysection{Referência à estrutura C\+O\+O\+R\+D\+E\+N\+A\+DA}
 \label{struct_c_o_o_r_d_e_n_a_d_a}\index{COORDENADA@{COORDENADA}}
+
+
+Struct para as coordenadas, sendo estas usadas para fazer jogadas.  
+
+
+
+
+{\ttfamily \#include $<$dados.\+h$>$}
+
 \doxysubsection*{Atributos Públicos}
 \begin{DoxyCompactItemize}
 \item 
@@ -12,9 +21,9 @@ int {\bfseries linha}
 
 
 \doxysubsection{Descrição detalhada}
+Struct para as coordenadas, sendo estas usadas para fazer jogadas. 
 
-
-Definido na linha 8 do ficheiro dados.\+h.
+Definido na linha 15 do ficheiro dados.\+h.
 
 
 
