--- a/LI2/latex/struct_j_o_g_a_d_a.tex
+++ b/LI2/latex/struct_j_o_g_a_d_a.tex
@@ -1,5 +1,14 @@
 \hypertarget{struct_j_o_g_a_d_a}{}\doxysection{Referência à estrutura J\+O\+G\+A\+DA}
 \label{struct_j_o_g_a_d_a}\index{JOGADA@{JOGADA}}
+
+
+Struct que guarda as coordenadas de um determinado jogador.  
+
+
+
+
+{\ttfamily \#include $<$dados.\+h$>$}
+
 \doxysubsection*{Atributos Públicos}
 \begin{DoxyCompactItemize}
 \item 
@@ -12,9 +21,9 @@
 
 
 \doxysubsection{Descrição detalhada}
+Struct que guarda as coordenadas de um determinado jogador. 
 
-
-Definido na linha 12 do ficheiro dados.\+h.
+Definido na linha 22 do ficheiro dados.\+h.
 
 
 
