--- a/LI2/latex/struct_e_s_t_a_d_o.tex
+++ b/LI2/latex/struct_e_s_t_a_d_o.tex
@@ -1,16 +1,25 @@
 \hypertarget{struct_e_s_t_a_d_o}{}\doxysection{Referência à estrutura E\+S\+T\+A\+DO}
 \label{struct_e_s_t_a_d_o}\index{ESTADO@{ESTADO}}
+
+
+Struct que guarda o estado atual do jogo (tabuleiro, ultima jogada, todas as jogadas efetuadas, numero total de jogadas e o jogador atual).  
+
+
+
+
+{\ttfamily \#include $<$dados.\+h$>$}
+
 \doxysubsection*{Atributos Públicos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{struct_e_s_t_a_d_o_ab56f0f1be16954d3768b4174d14c087d}\label{struct_e_s_t_a_d_o_ab56f0f1be16954d3768b4174d14c087d}} 
-C\+A\+SA {\bfseries tab} \mbox{[}8\mbox{]}\mbox{[}8\mbox{]}
+\mbox{\hyperlink{dados_8h_aba91601f16d4c485b2d9b8c429f27039}{C\+A\+SA}} {\bfseries tab} \mbox{[}8\mbox{]}\mbox{[}8\mbox{]}
 \item 
 \mbox{\Hypertarget{struct_e_s_t_a_d_o_a4896a5c5c1f40b43fb795623327e3f47}\label{struct_e_s_t_a_d_o_a4896a5c5c1f40b43fb795623327e3f47}} 
 \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{C\+O\+O\+R\+D\+E\+N\+A\+DA}} {\bfseries ultima\+\_\+jogada}
 \item 
 \mbox{\Hypertarget{struct_e_s_t_a_d_o_afae43b87a488fad0f2b56a18bad31d18}\label{struct_e_s_t_a_d_o_afae43b87a488fad0f2b56a18bad31d18}} 
-J\+O\+G\+A\+D\+AS {\bfseries jogadas}
+\mbox{\hyperlink{dados_8h_a94c221d29a1760f008b7834093259b7d}{J\+O\+G\+A\+D\+AS}} {\bfseries jogadas}
 \item 
 \mbox{\Hypertarget{struct_e_s_t_a_d_o_a261495728744647e618b4e623f5a4b7a}\label{struct_e_s_t_a_d_o_a261495728744647e618b4e623f5a4b7a}} 
 int {\bfseries num\+\_\+jogadas}
@@ -21,9 +30,9 @@ int {\bfseries jogador\+\_\+atual}
 
 
 \doxysubsection{Descrição detalhada}
+Struct que guarda o estado atual do jogo (tabuleiro, ultima jogada, todas as jogadas efetuadas, numero total de jogadas e o jogador atual). 
 
-
-Definido na linha 17 do ficheiro dados.\+h.
+Definido na linha 33 do ficheiro dados.\+h.
 
 
 
